vscode-hkscript/src/parser/HksScriptParser.js
// Generated from /home/ayanami/HKSScript/Grammar/HksScript.g4 by ANTLR 4.13.2
// jshint ignore: start
const antlr4 = require('antlr4');


const atn = new antlr4.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

class HksScriptParser extends antlr4.Parser {

    static grammarFileName = "HksScript.g4";
    static literalNames = [ null, "'let'", "':'", "'='", "'int'", "'float'", 
                            "'string'", "'bool'", "'Mat'", "'|>'", "'<'", 
                            "'>'", "'=='", "'<>'", "'<='", "'>='", "'+'", 
                            "'-'", "'*'", "'/'", "'.'", "'('", "')'", "'load'", 
                            "','", "'true'", "'false'", "'or'", "'and'", 
                            "'not'", "'query'", null, null, null, null, 
                            "';'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, "OR", "AND", "NOT", "QUERY", 
                             "INT", "FLOAT", "STRING", "ID", "SEMI", "WS", 
                             "LINE_COMMENT", "BLOCK_COMMENT" ];
    static ruleNames = [ "program", "statement", "letStmt", "type_", "exprStmt", 
                         "expr", "condition", "condOr", "condAnd", "condNot", 
                         "condPrimary", "exprList", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HksScriptParser.ruleNames;
        this.literalNames = HksScriptParser.literalNames;
        this.symbolicNames = HksScriptParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 5:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 12);
    		case 1:
    			return this.precpred(this._ctx, 11);
    		case 2:
    			return this.precpred(this._ctx, 10);
    		case 3:
    			return this.precpred(this._ctx, 9);
    		case 4:
    			return this.precpred(this._ctx, 7);
    		case 5:
    			return this.precpred(this._ctx, 6);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HksScriptParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 29;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2258763778) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 7) !== 0)) {
	            this.state = 26;
	            this.statement();
	            this.state = 31;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 32;
	        this.match(HksScriptParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HksScriptParser.RULE_statement);
	    try {
	        this.state = 40;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 34;
	            this.letStmt();
	            this.state = 35;
	            this.match(HksScriptParser.SEMI);
	            break;
	        case 17:
	        case 21:
	        case 23:
	        case 25:
	        case 26:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 37;
	            this.exprStmt();
	            this.state = 38;
	            this.match(HksScriptParser.SEMI);
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	letStmt() {
	    let localctx = new LetStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HksScriptParser.RULE_letStmt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 42;
	        this.match(HksScriptParser.T__0);
	        this.state = 43;
	        this.match(HksScriptParser.ID);
	        this.state = 46;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===2) {
	            this.state = 44;
	            this.match(HksScriptParser.T__1);
	            this.state = 45;
	            this.type_();
	        }

	        this.state = 48;
	        this.match(HksScriptParser.T__2);
	        this.state = 49;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	type_() {
	    let localctx = new Type_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HksScriptParser.RULE_type_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 51;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 496) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exprStmt() {
	    let localctx = new ExprStmtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HksScriptParser.RULE_exprStmt);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 53;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 10;
	    this.enterRecursionRule(localctx, 10, HksScriptParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 72;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new UnaryExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;

	            this.state = 56;
	            this.match(HksScriptParser.T__16);
	            this.state = 57;
	            this.expr(8);
	            break;

	        case 2:
	            localctx = new LoadExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 58;
	            this.match(HksScriptParser.T__22);
	            this.state = 59;
	            this.match(HksScriptParser.STRING);
	            break;

	        case 3:
	            localctx = new ParenExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 60;
	            this.match(HksScriptParser.T__20);
	            this.state = 61;
	            this.expr(0);
	            this.state = 62;
	            this.match(HksScriptParser.T__21);
	            break;

	        case 4:
	            localctx = new LiteralExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 64;
	            this.literal();
	            break;

	        case 5:
	            localctx = new CallExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 65;
	            this.match(HksScriptParser.ID);
	            this.state = 66;
	            this.match(HksScriptParser.T__20);
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 17)) & ~0x1f) === 0 && ((1 << (_la - 17)) & 246609) !== 0)) {
	                this.state = 67;
	                this.exprList();
	            }

	            this.state = 70;
	            this.match(HksScriptParser.T__21);
	            break;

	        case 6:
	            localctx = new VarExprContext(this, localctx);
	            this._ctx = localctx;
	            _prevctx = localctx;
	            this.state = 71;
	            this.match(HksScriptParser.ID);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 103;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 101;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new PipeExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 74;
	                    if (!( this.precpred(this._ctx, 12))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 12)");
	                    }
	                    this.state = 75;
	                    this.match(HksScriptParser.T__8);
	                    this.state = 76;
	                    this.expr(13);
	                    break;

	                case 2:
	                    localctx = new CompExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 77;
	                    if (!( this.precpred(this._ctx, 11))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 11)");
	                    }
	                    this.state = 78;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 64512) !== 0))) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 79;
	                    this.expr(12);
	                    break;

	                case 3:
	                    localctx = new AddExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 80;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 81;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===16 || _la===17)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 82;
	                    this.expr(11);
	                    break;

	                case 4:
	                    localctx = new MulExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 83;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 84;
	                    localctx.op = this._input.LT(1);
	                    _la = this._input.LA(1);
	                    if(!(_la===18 || _la===19)) {
	                        localctx.op = this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 85;
	                    this.expr(10);
	                    break;

	                case 5:
	                    localctx = new QueryExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 86;
	                    if (!( this.precpred(this._ctx, 7))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                    }
	                    this.state = 87;
	                    this.match(HksScriptParser.T__19);
	                    this.state = 88;
	                    this.match(HksScriptParser.QUERY);
	                    this.state = 89;
	                    this.match(HksScriptParser.T__20);
	                    this.state = 90;
	                    this.condition();
	                    this.state = 91;
	                    this.match(HksScriptParser.T__21);
	                    break;

	                case 6:
	                    localctx = new MethodCallExprContext(this, new ExprContext(this, _parentctx, _parentState));
	                    this.pushNewRecursionContext(localctx, _startState, HksScriptParser.RULE_expr);
	                    this.state = 93;
	                    if (!( this.precpred(this._ctx, 6))) {
	                        throw new antlr4.FailedPredicateException(this, "this.precpred(this._ctx, 6)");
	                    }
	                    this.state = 94;
	                    this.match(HksScriptParser.T__19);
	                    this.state = 95;
	                    this.match(HksScriptParser.ID);
	                    this.state = 96;
	                    this.match(HksScriptParser.T__20);
	                    this.state = 98;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if(((((_la - 17)) & ~0x1f) === 0 && ((1 << (_la - 17)) & 246609) !== 0)) {
	                        this.state = 97;
	                        this.exprList();
	                    }

	                    this.state = 100;
	                    this.match(HksScriptParser.T__21);
	                    break;

	                } 
	            }
	            this.state = 105;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	condition() {
	    let localctx = new ConditionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HksScriptParser.RULE_condition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this.condOr();
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condOr() {
	    let localctx = new CondOrContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HksScriptParser.RULE_condOr);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 108;
	        this.condAnd();
	        this.state = 113;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===27) {
	            this.state = 109;
	            this.match(HksScriptParser.OR);
	            this.state = 110;
	            this.condAnd();
	            this.state = 115;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condAnd() {
	    let localctx = new CondAndContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HksScriptParser.RULE_condAnd);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.condNot();
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===28) {
	            this.state = 117;
	            this.match(HksScriptParser.AND);
	            this.state = 118;
	            this.condNot();
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condNot() {
	    let localctx = new CondNotContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HksScriptParser.RULE_condNot);
	    try {
	        this.state = 127;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 29:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 124;
	            this.match(HksScriptParser.NOT);
	            this.state = 125;
	            this.condNot();
	            break;
	        case 17:
	        case 21:
	        case 23:
	        case 25:
	        case 26:
	        case 31:
	        case 32:
	        case 33:
	        case 34:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 126;
	            this.condPrimary();
	            break;
	        default:
	            throw new antlr4.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	condPrimary() {
	    let localctx = new CondPrimaryContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, HksScriptParser.RULE_condPrimary);
	    var _la = 0;
	    try {
	        this.state = 137;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 129;
	            this.match(HksScriptParser.T__20);
	            this.state = 130;
	            this.condition();
	            this.state = 131;
	            this.match(HksScriptParser.T__21);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 133;
	            this.expr(0);
	            this.state = 134;
	            localctx.op = this._input.LT(1);
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 64512) !== 0))) {
	                localctx.op = this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 135;
	            this.expr(0);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	exprList() {
	    let localctx = new ExprListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, HksScriptParser.RULE_exprList);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 139;
	        this.expr(0);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===24) {
	            this.state = 140;
	            this.match(HksScriptParser.T__23);
	            this.state = 141;
	            this.expr(0);
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	literal() {
	    let localctx = new LiteralContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, HksScriptParser.RULE_literal);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 147;
	        _la = this._input.LA(1);
	        if(!(((((_la - 25)) & ~0x1f) === 0 && ((1 << (_la - 25)) & 451) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

HksScriptParser.EOF = antlr4.Token.EOF;
HksScriptParser.T__0 = 1;
HksScriptParser.T__1 = 2;
HksScriptParser.T__2 = 3;
HksScriptParser.T__3 = 4;
HksScriptParser.T__4 = 5;
HksScriptParser.T__5 = 6;
HksScriptParser.T__6 = 7;
HksScriptParser.T__7 = 8;
HksScriptParser.T__8 = 9;
HksScriptParser.T__9 = 10;
HksScriptParser.T__10 = 11;
HksScriptParser.T__11 = 12;
HksScriptParser.T__12 = 13;
HksScriptParser.T__13 = 14;
HksScriptParser.T__14 = 15;
HksScriptParser.T__15 = 16;
HksScriptParser.T__16 = 17;
HksScriptParser.T__17 = 18;
HksScriptParser.T__18 = 19;
HksScriptParser.T__19 = 20;
HksScriptParser.T__20 = 21;
HksScriptParser.T__21 = 22;
HksScriptParser.T__22 = 23;
HksScriptParser.T__23 = 24;
HksScriptParser.T__24 = 25;
HksScriptParser.T__25 = 26;
HksScriptParser.OR = 27;
HksScriptParser.AND = 28;
HksScriptParser.NOT = 29;
HksScriptParser.QUERY = 30;
HksScriptParser.INT = 31;
HksScriptParser.FLOAT = 32;
HksScriptParser.STRING = 33;
HksScriptParser.ID = 34;
HksScriptParser.SEMI = 35;
HksScriptParser.WS = 36;
HksScriptParser.LINE_COMMENT = 37;
HksScriptParser.BLOCK_COMMENT = 38;

HksScriptParser.RULE_program = 0;
HksScriptParser.RULE_statement = 1;
HksScriptParser.RULE_letStmt = 2;
HksScriptParser.RULE_type_ = 3;
HksScriptParser.RULE_exprStmt = 4;
HksScriptParser.RULE_expr = 5;
HksScriptParser.RULE_condition = 6;
HksScriptParser.RULE_condOr = 7;
HksScriptParser.RULE_condAnd = 8;
HksScriptParser.RULE_condNot = 9;
HksScriptParser.RULE_condPrimary = 10;
HksScriptParser.RULE_exprList = 11;
HksScriptParser.RULE_literal = 12;

class ProgramContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_program;
    }

	EOF() {
	    return this.getToken(HksScriptParser.EOF, 0);
	};

	statement = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StatementContext);
	    } else {
	        return this.getTypedRuleContext(StatementContext,i);
	    }
	};


}



class StatementContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_statement;
    }

	letStmt() {
	    return this.getTypedRuleContext(LetStmtContext,0);
	};

	SEMI() {
	    return this.getToken(HksScriptParser.SEMI, 0);
	};

	exprStmt() {
	    return this.getTypedRuleContext(ExprStmtContext,0);
	};


}



class LetStmtContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_letStmt;
    }

	ID() {
	    return this.getToken(HksScriptParser.ID, 0);
	};

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	type_() {
	    return this.getTypedRuleContext(Type_Context,0);
	};


}



class Type_Context extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_type_;
    }



}



class ExprStmtContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_exprStmt;
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};


}



class ExprContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_expr;
    }


	 
		copyFrom(ctx) {
			super.copyFrom(ctx);
		}

}


class LoadExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	STRING() {
	    return this.getToken(HksScriptParser.STRING, 0);
	};


}

HksScriptParser.LoadExprContext = LoadExprContext;

class VarExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	ID() {
	    return this.getToken(HksScriptParser.ID, 0);
	};


}

HksScriptParser.VarExprContext = VarExprContext;

class MethodCallExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	ID() {
	    return this.getToken(HksScriptParser.ID, 0);
	};

	exprList() {
	    return this.getTypedRuleContext(ExprListContext,0);
	};


}

HksScriptParser.MethodCallExprContext = MethodCallExprContext;

class PipeExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};


}

HksScriptParser.PipeExprContext = PipeExprContext;

class UnaryExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};


}

HksScriptParser.UnaryExprContext = UnaryExprContext;

class AddExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.op = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};


}

HksScriptParser.AddExprContext = AddExprContext;

class LiteralExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	literal() {
	    return this.getTypedRuleContext(LiteralContext,0);
	};


}

HksScriptParser.LiteralExprContext = LiteralExprContext;

class CompExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.op = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};


}

HksScriptParser.CompExprContext = CompExprContext;

class MulExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        this.op = null;;
        super.copyFrom(ctx);
    }

	expr = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ExprContext);
	    } else {
	        return this.getTypedRuleContext(ExprContext,i);
	    }
	};


}

HksScriptParser.MulExprContext = MulExprContext;

class QueryExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};

	QUERY() {
	    return this.getToken(HksScriptParser.QUERY, 0);
	};

	condition() {
	    return this.getTypedRuleContext(ConditionContext,0);
	};


}

HksScriptParser.QueryExprContext = QueryExprContext;

class CallExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	ID() {
	    return this.getToken(HksScriptParser.ID, 0);
	};

	exprList() {
	    return this.getTypedRuleContext(ExprListContext,0);
	};


}

HksScriptParser.CallExprContext = CallExprContext;

class ParenExprContext extends ExprContext {

    constructor(parser, ctx) {
        super(parser);
        super.copyFrom(ctx);
    }

	expr() {
	    return this.getTypedRuleContext(ExprContext,0);
	};


}

HksScriptParser.ParenExprContext = ParenExprContext;

class ConditionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = HksScriptParser.RULE_condition;
    }

	condOr() {
	    return this.getTypedRuleContext(CondOrContext,0);
	};


}


